# okapi

./: .env.example  .gitignore  PLAN.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: entry.py
src/okapi/: __init__.py  agent.py  cli.py  okf_schema.py  prompts.py  update.py  validator.py  visualizer.py
tests/: test_agent.py  test_prompts.py  test_update.py  test_validator.py  test_visualizer.py
tests/fixtures/tiny_bundle/invalid/: index.md  missing-type.md  no-frontmatter.md
tests/fixtures/tiny_bundle/invalid/orphans/: bare.md
tests/fixtures/tiny_bundle/valid/: index.md  log.md  overview.md
tests/fixtures/tiny_bundle/valid/services/: billing.md  index.md
