[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okapi"
version = "0.1.0"
description = "Reverse-engineer a codebase into an Open Knowledge Format (OKF) bundle using the Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Oussama Chaabouni" }]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/oussamachaabounii/okapi"
Issues = "https://github.com/oussamachaabounii/okapi/issues"

[project.scripts]
okapi = "okapi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
